--- a/k8s/frontend-pod.yml
+++ b/k8s/frontend-pod.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: "frontend"
-  namespace: default
+  namespace: testme
   labels:
     app: "frontend"
 spec:
